# gym-backend

./:  TODO.md  .env  .gitignore  backend_gym.db  docker-compose.yml  pyproject.toml  requirements.txt  seed_db.py
app/: config v1.py  config.py  main.py
app/core/: security.py
app/db/: database initial.py  database.py  models.py
app/routers/: auth.py  exercises.py  history.py  plans copy 2.py  plans copy.py  plans.py  workouts.py
app/schemas/: exercise.py  plan.py  session.py  user.py  workout.py
